<package>
  <name>rbx1</name>
  <version>0.4.0</version>
  <description>ROS By Example Volume 1</description>
  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rbx_vol_1</url>

  <url type="bugtracker">https://github.com/pirobot/rbx1/issues</url>

  <author email="patrick@pirobot.org">Maintained by Patrick Goebel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rbx1_description</run_depend>
  <run_depend>rbx1_speech</run_depend>
  <run_depend>rbx1_dynamixels</run_depend>
  <run_depend>rbx1_nav</run_depend>
  <run_depend>rbx1_apps</run_depend>
  <run_depend>rbx1_bringup</run_depend>
  <run_depend>rbx1_vision</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
