<package>
  <name>rbx1_description</name>
  <version>0.4.0</version>

  <description>ROS By Example Vol 1 URDF/Xacro Package</description>

  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rbx1_description</url>
  <url type="bugtracker">https://github.com/pirobot/rbx1/issues</url>
  <author email="patrick@pirobot.org">Patrick Goebel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>urdf</run_depend>

  <export>

  </export>
</package>