<package>
  <name>rbx1_speech</name>
  <version>0.4.0</version>

  <description>ROS by Example Vol 1 Speech Package</description>

  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rbx1_speech</url>
  <url type="bugtracker">https://github.com/pirobot/rbx1/issues</url>
  <author email="patrick@pirobot.org">Patrick Goebel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pocketsphinx</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pocketsphinx</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>